--- a/index.html
+++ b/index.html
@@ -242,32 +242,32 @@
    <tr>
     <td>1</td>
      <td><img src="RUKUNDO L FC.png" alt="" width="20" style="vertical-align: middle;"> Rukundo Fc</td>
-    <td>5</td><td>3</td><td>0</td><td>1</td><td>0</td><td>0</td><td>11
+    <td>5</td><td>3</td><td>0</td><td>1</td><td>0</td><td>1</td><td>11
   </tr>
   <tr>
     <td>2</td>
-    <td><img src="RUMURI L FC.jpg" alt="" width="20" style="vertical-align: middle;"> Rumuri FC</td>
-    <td>4</td><td>2</td><td>0</td><td>1</td><td>5</td><td>1</td><td>7
+        <td><img src="INTARE BATINYA L FC.png" alt="" width="20" style="vertical-align: middle;"> Intare Batinya FC</td>
+    <td>5</td><td>3</td><td>2</td><td>0</td><td>8</td><td>2</td><td>9
   </tr>
   <tr>
     <td>3</td>
-     <td><img src="INTWARI L FC.jpg" alt="" width="20" style="vertical-align: middle;"> Intwari FC</td>
-    <td>5</td><td>2</td><td>2</td><td>0</td><td>6</td><td>2</td><td>7
+     <td><img src="Ninga Academy L.jpg" alt="" width="20" style="vertical-align: middle;"> Ninga Academy</td>
+    <td>5</td><td>2</td><td>1</td><td>2</td><td>4</td><td>1</td><td>8
   </tr>
   <tr>
     <td>4</td>
-    <td><img src="INTARE BATINYA L FC.png" alt="" width="20" style="vertical-align: middle;"> Intare Batinya FC</td>
-    <td>4</td><td>2</td><td>2</td><td>0</td><td>6</td><td>2</td><td>6
+     <td><img src="RUMURI L FC.jpg" alt="" width="20" style="vertical-align: middle;"> Rumuri FC</td>
+    <td>4</td><td>2</td><td>0</td><td>1</td><td>5</td><td>1</td><td>7
   </tr>
   <tr>
     <td>5</td>
-    <td><img src="NINGA ACADEMY L.png" alt="" width="20" style="vertical-align: middle;"> Ninga Academy</td>
-    <td>4</td><td>1</td><td>1</td><td>2</td><td>1</td><td>1</td><td>5
+     <td><img src="INTWARI L FC.jpg" alt="" width="20" style="vertical-align: middle;"> Intwari FC</td>
+    <td>5</td><td>2</td><td>2</td><td>1</td><td>6</td><td>2</td><td>7
   </tr>
   <tr>
     <td>6</td>
     <td><img src="AMASIPIRI L FC.jpg" alt="" width="20" style="vertical-align: middle;"> Amasipiri FC</td>
-    <td>4</td><td>1</td><td>2</td><td>1</td><td>4</td><td>2</td><td>4
+    <td>5</td><td>1</td><td>2</td><td>2</td><td>4</td><td>2</td><td>4
   </tr>
   <tr>
     <td>7</td>
@@ -277,7 +277,7 @@
   <tr>
     <td>8</td>
      <td><img src="INTORE L FC.png" alt="" width="20" style="vertical-align: middle;"> Intore FC</td>
-    <td>4</td><td>1</td><td>3</td><td>0</td><td>2</td><td>3</td><td>3
+    <td>5</td><td>1</td><td>4</td><td>0</td><td>2</td><td>4</td><td>3
   </tr>
   <tr>
 
@@ -306,3 +306,4 @@
 </body>
 
 </html>
+
