--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
 
     <section id="table" class="page">
-      <h1>LaLiga Table</h1>
+      <h1>INTER CUP DE VILLAGE  Table</h1>
       <div class="table-wrapper">
         <table id="standingsTable">
           <thead>
@@ -306,4 +306,5 @@
 </body>
 
 </html>
+
 
